--- a/codsoft_task4.ipynb
+++ b/codsoft_task4.ipynb
@@ -614,10 +614,10 @@
       "source": [
         "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
         "\n",
-        "y_pred = model.predict(X_test)\n",
-        "mae = mean_absolute_error(y_test, y_pred)\n",
-        "mse = mean_squared_error(y_test, y_pred)\n",
-        "r2 = r2_score(y_test, y_pred)\n",
+        "pred = model.predict(X_test)\n",
+        "mae = mean_absolute_error(y_test, pred)\n",
+        "mse = mean_squared_error(y_test, pred)\n",
+        "r2 = r2_score(y_test, pred)\n",
         "\n",
         "print(f'Mean Absolute Error: {mae:.2f}')\n",
         "print(f'Mean Squared Error: {mse:.2f}')\n",
